# StoryMaker

./: .gitignore  PROGRESS.md  README.md  app.py  cli.py  index.html  pyproject.toml  script.js  server.py  style.css
agents/animatic/: agent.py  schemas.py  validators.py
agents/animatic/prompts/: training.md
agents/animatic/renderer/: animatic_renderer.py  run_renderer.py
agents/scenario/: agent.py  schemas.py
agents/scenario/prompts/: training.md
agents/storyboard/: agent.py  docx_export.py  image_gen.py  image_prompt.py  schemas.py
agents/storyboard/prompts/: training.md
docs/: README.md
docs/superpowers/plans/: 2026-07-08-storymaker-repo-scaffold.md
docs/superpowers/specs/: 2026-07-08-storymaker-repo-scaffold-design.md
pipeline/: run_pipeline.py
shared/: claude_client.py  gemini_client.py  io_utils.py
storymaker/: __init__.py
tests/: test_cli.py  test_server.py
tests/animatic/: test_agent.py  test_schemas.py  test_validators.py
tests/animatic/renderer/: test_run_renderer.py
tests/pipeline/: test_run_pipeline.py
tests/scenario/: test_agent.py  test_schemas.py
tests/shared/: test_claude_client.py  test_gemini_client.py  test_io_utils.py
tests/storyboard/: test_agent.py  test_docx_export.py  test_image_gen.py  test_image_prompt.py  test_schemas.py
