[project]
name = "storymaker"
version = "0.1.0"
description = "AI 기반 영상 프리프로덕션 자동화 파이프라인 (시나리오-스토리보드-애니매틱)"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=0.3.0",
    "pydantic>=2.9.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.59.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
