[project]
name = "storymaker"
version = "0.1.0"
description = "AI 기반 영상 프리프로덕션 자동화 파이프라인 (시나리오-스토리보드-애니매틱)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "google-genai>=0.3.0",
    "httpx>=0.28.1",
    "pydantic>=2.9.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.32",
    "streamlit>=1.59.0",
    "uvicorn[standard]>=0.50.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
